# marshmallow-litestar-plugin

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
marshmallow_litestar_plugin/: __init__.py  dto.py  plugin.py  types.py  utils.py
